--- a/fixtures/settings/settings.yaml
+++ b/fixtures/settings/settings.yaml
@@ -80,6 +80,7 @@ defaults:
       ALERT_THRESHOLD: 80 # percentage of budget
       BUDGET_AMOUNT: 500.0 # USD
       BUDGET_NAME: SpaBudget
+      WITH_START_STOP_EC2_INSTANCES: disabled
 
   purge: # of expired accounts
 
@@ -116,6 +117,7 @@ organizational_units:
       # passed to Codebuild project for the preparation of an account
       variables:
         BUDGET_NAME: DataTeamBudget
+        WITH_START_STOP_EC2_INSTANCES: enabled
 
     purge: # of expired accounts
 
